--- a/package.json
+++ b/package.json
@@ -2,9 +2,7 @@
   "name": "rockflow",
   "version": "0.1.0",
   "private": true,
-  "engines": {
-    "node": ">=18"
-  },
+  "engines": { "node": ">=18" },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -14,9 +12,13 @@
   "dependencies": {
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.95.0",
+    "mammoth": "^1.6.0",
     "next": "16.1.6",
+    "openai": "^4.73.0",
+    "pdf-parse": "^1.1.1",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "word-extractor": "^1.0.4"
   },
   "devDependencies": {
     "@eslint/js": "^9",
